--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,6 +19,10 @@
       </div>
 
       <div class="mb-3">
+        <%= f.time_zone_select :time_zone, nil, {}, class: 'form-control' %>
+      </div> 
+
+      <div class="mb-3">
         <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: 'Confirm Password'  %>
       </div>
 
